--- a/templates/exam_points.html
+++ b/templates/exam_points.html
@@ -311,6 +311,7 @@ $(document).ready(function(){
                         response_data = response['old']
                         show_error(get_error_msg(response.status, 1, response['max_exam_points']));
                     }
+                    model.set("in_points", response_data["in_points"]);
                     model.set("additional_points", response_data["additional_points"]);
                     model.set("exam_points", response_data["exam_points"]);
                     model.set("exam_mark", response_data["mark"]);
@@ -333,7 +334,7 @@ $(document).ready(function(){
     });
 
     var apps = new Applications(data);
-
+    var test = {{exam.controlType}}
     var columns=[
         {
             editable: false,
@@ -368,7 +369,7 @@ $(document).ready(function(){
             additional_class: 'rotate',
         },
         {
-            editable: false,
+            {% if exam.controlType != 5 and exam.controlType != 4 %}editable: false,{% endif %}
             name: "in_points" ,
             label: "Сумма баллов за текущую работу",
             cell: "string",
