Removed download group scores button

--- a/templates/students_scores.html
+++ b/templates/students_scores.html
@@ -70,11 +70,11 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <!--div class="row">
             <div class="col">
                 <a href="{% url 'disciplines:excel:brs_scores' %}?course_id={{ discipline.id }}" class="btn btn-primary">Скачать контрольный лист</a>
             </div>
-        </div>
+        </div-->
     </div>
 {% endblock %}
 
