--- a/templates/employee_edit.html
+++ b/templates/employee_edit.html
@@ -5,7 +5,7 @@
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
-            <h1>Редактирование работника</h1>
+            <h1>Редактирование сотрудника</h1>
             <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
