--- a/templates/supervisionhours.html
+++ b/templates/supervisionhours.html
@@ -10,7 +10,7 @@
         width:150px !important;
     }
 </style>
-    <h1>Часы ВКР и практик</h1>
+    <h1>Часы ВКР и курсовых</h1>
     <p align="right">
         <label>
             <b>Type</b>
