--- a/templates/supervision_edit.html
+++ b/templates/supervision_edit.html
@@ -5,7 +5,7 @@
     <div class="container">
         <form action="" method="post">
             {% csrf_token %}
-            <h1>Редактирование часов ВКР и практик</h1>
+            <h1>Редактирование часов ВКР и курсовых</h1>
             <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
