create export docx, minor fixes

--- a/templates/rpd_list.html
+++ b/templates/rpd_list.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="alert alert-danger" role="alert" id="error" style="visibility:hidden;position:fixed;top:0;left:0;width:100%;z-index:100;"></div>
-    <h1>Список рабочих планов дисциплин</h1>
+    <h1>Список рабочих программ дисциплин</h1>
     <table id="my_table2" class="table table-bordered">
         <thead class="thead-light">
             <tr>
