--- a/templates/rpd.html
+++ b/templates/rpd.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Добавление рабочей программы дисциплины{% endblock %}
 {% block content %}
-    <form action="" method="POST" class="post-form">
+    <form action="{% url 'rpds:rpd' discipline.id %}" method="POST" class="post-form">
         <h1>1. Аннотация</h1>
         <h2 align="center">к рабочей программе дисциплины</h2>
         <h2 align="center">{{ discipline.code }} {{ discipline.Name }}</h2>
@@ -12,8 +12,39 @@
             {{ form.abstract.label_tag }}
             {{ form.abstract }}
         <h5 align="justify">1.2. Перечень планируемых результатов обучения по дисциплине, соотнесенных с планируемыми результатами освоения образовательной программы</h5>
+        {{ results.management_form }}
         <table id=results class="table table-sm">
                 {% for form in results %}
+                    {% if forloop.first %}
+                <thead align="center" class="thead-dark">
+                        {% for field in form %}
+                            <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
+                        {% endfor %}
+                            <th></th>
+                </thead>
+                <tbody align="center">
+                    {% endif %}
+                    <tr>
+                        {% for field in form %}
+                        <td{% if forloop.last %} style="display:None" {% endif %}>{{ field }}
+                        {% endfor %}
+                        <td><button type="button" class="btn btn-danger btn-sm" onclick="deleteRow(this)">Удалить строку</button></td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="row">
+          <div class="col-xs-6 col-sm-3"></div>
+          <div class="col-xs-6 col-sm-3"></div>
+          <div class="col-xs-6 col-sm-3"></div>
+          <div align="right" class="col-xs-6 col-sm-3">
+              <button type="button" class="btn btn-success" onclick="addRow('results');return false;">Добавить строку</button>
+          </div>
+        </div>
+        <h5 align="justify">1.3. Место дисциплины в структуре ОПОП</h5>
+        {{ basement.management_form }}
+        <table id=basement align="center" class="table table-sm">
+                {% for form in basement %}
                     {% if forloop.first %}
                 <thead align="center" class="thead-dark">
                         {% for field in form %}
@@ -30,38 +61,9 @@
                         <td><button type="button" class="btn btn-danger btn-sm" onclick="deleteRow(this)">Удалить строку</button></td>
                     </tr>
                 {% endfor %}
-            </tbody>
-        </table>
-        <div class="row">
-          <div class="col-xs-6 col-sm-3"></div>
-          <div class="col-xs-6 col-sm-3"></div>
-          <div class="col-xs-6 col-sm-3"></div>
-          <div align="right" class="col-xs-6 col-sm-3">
-              <button type="button" class="btn btn-success" onclick="addRow('results');return false;">Добавить строку</button>
-          </div>
-        </div>
-        <h5 align="justify">1.3. Место дисциплины в структуре ОПОП</h5>
-            <table id=basement align="center" class="table table-sm">
-                    {% for form in basement %}
-                        {% if forloop.first %}
-                <thead align="center" class="thead-dark">
-                            {% for field in form %}
-                                 <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
-                            {% endfor %}
-                        {% endif %}
-                <th></th>
-                </thead>
-                <tbody align="center">
-                        <tr>
-                            {% for field in form %}
-                            <td{% if forloop.last %} style="display:None" {% endif %}>{{ field }}</td>
-                            {% endfor %}
-                            <td><button type="button" class="btn btn-danger btn-sm" onclick="deleteRow(this)">Удалить строку</button></td>
-                        </tr>
-                    {% endfor %}
                 </tbody>
             </table>
-        <div class="row">
+          <div class="row">
           <div class="col-xs-6 col-sm-3"></div>
           <div class="col-xs-6 col-sm-3"></div>
           <div class="col-xs-6 col-sm-3"></div>
@@ -75,17 +77,18 @@
         <label>Вручную пользователем не вводится</label>
         <h5 align="justify">3. Содержание дисциплины, структурированное по темам с указанием отведенного на них количества академических часов и видов учебных занятий</h5>
         <h5 align="center">3.1. Распределение часов по темам и видам учебных занятий</h5>
+        {{ hours_distribution.management_form }}
         <table id=hours_distribution class="table table-sm">
                 {% for form in hours_distribution %}
                     {% if forloop.first %}
             <thead align="center" class="thead-dark">
                         {% for field in form %}
-                             <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
+                            <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
                         {% endfor %}
-                    {% endif %}
-            <th></th>
+                            <th></th>
             </thead>
             <tbody align="center">
+                    {% endif %}
                     <tr>
                         {% for field in form %}
                             <td{% if forloop.last %} style="display:None" {% endif %}>{{ field }}</td>
@@ -104,6 +107,7 @@
           </div>
         </div>
         <h5 align="center">3.2. Содержание тем программы дисциплины</h5>
+        {{ theme.management_form }}
         <table id=theme class="table table-sm">
                     {% for form in theme %}
                     {% if forloop.first %}
@@ -111,13 +115,13 @@
                         {% for field in form %}
                              <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
                         {% endfor %}
-                    {% endif %}
-            <th></th>
+                            <th></th>
             </thead>
             <tbody align="center">
+                    {% endif %}
                     <tr>
                         {% for field in form %}
-                            <td{% if forloop.last %} style="display:None" {% endif %}>{{ field }}</td>
+                            <td {% if forloop.last %} style="display:None" {% endif %}>{{ field }}</td>
                         {% endfor %}
                         <td><button type="button" class="btn btn-danger btn-sm" onclick="deleteRow(this)">Удалить строку</button></td>
                     </tr>
@@ -139,6 +143,7 @@
             {{ form.count_e_method_support.label_tag }}
             {{ form.count_e_method_support }}
         <h5 align="center">Содержание СРС</h5>
+        {{ srs_content.management_form }}
         <table id=srs_content class="table table-sm">
                 {% for form in srs_content %}
                     {% if forloop.first %}
@@ -168,6 +173,7 @@
           </div>
         </div>
         <h5 align="center">Лабораторные работы или лабораторные практикумы</h5>
+        {{ labs_content.management_form }}
         <table id=labs_content class="table table-sm">
                 {% for form in labs_content %}
                     {% if forloop.first %}
@@ -200,6 +206,7 @@
             {{ form.methodological_instructions.label_tag }}
             {{ form.methodological_instructions }}
         <h5 align="justify">Рейтинговый регламент по дисциплине:</h5>
+        {{ disc_rating.management_form }}
         <table id=disc_rating class="table table-sm">
                 {% for form in disc_rating %}
                     {% if forloop.first %}
@@ -232,6 +239,7 @@
             {{ form.fos_fond.label_tag }}
             {{ form.fos_fond }}
         <h5 align="center">6.1. Показатели, критерии и шкала оценивания</h5>
+        {{ mark_scale.management_form }}
         <table id=mark_scale class="table table-sm">
                 {% for form in mark_scale %}
                     {% if forloop.first %}
@@ -263,6 +271,7 @@
         <h5 align="center">6.2. Примерные контрольные задания (вопросы) для промежуточной аттестации</h5>
             {{ form.fos_methodology.label_tag }}
             {{ form.fos_methodology }}
+        {{ fos_table.management_form }}
         <table id=fos class="table table-sm">
                 {% for form in fos_table %}
                     {% if forloop.first %}
@@ -295,7 +304,8 @@
             {{ form.scaling_methodology.label_tag }}
             {{ form.scaling_methodology }}
         <h5 align="center">7. Перечень основной и дополнительной учебной литературы, необходимой для освоения дисциплины </h5>
-        <label>Основная учебная литература</label>
+        <label>Примечание: Для обозначения основной литературы в строке "Главная литература" поставьте галочку.</label>
+        {{ bibl.management_form }}
         <table id=mainlit class="table table-sm">
                 {% for form in bibl %}
                     {% if forloop.first %}
@@ -324,35 +334,6 @@
               <button type="button" class="btn btn-success" onclick="addRow('mainlit');return false;">Добавить строку</button>
           </div>
         </div>
-        <label>Дополнительная учебная литература</label>
-        <table id=myTable class="table table-sm">
-                {% for form in bibl2 %}
-                    {% if forloop.first %}
-            <thead align="center" class="thead-dark">
-                        {% for field in form %}
-                            <th{% if forloop.last %} style="display:None" {% endif %}>{{ field.label_tag }}</th>
-                        {% endfor %}
-                    {% endif %}
-            <th></th>
-            </thead>
-            <tbody align="center">
-                    <tr>
-                        {% for field in form %}
-                            <td{% if forloop.last %} style="display:None" {% endif %}>{{ field }}</td>
-                        {% endfor %}
-                        <td><button type="button" class="btn btn-danger btn-sm" onclick="deleteRow(this)">Удалить строку</button></td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="row">
-          <div class="col-xs-6 col-sm-3"></div>
-          <div class="col-xs-6 col-sm-3"></div>
-          <div class="col-xs-6 col-sm-3"></div>
-          <div align="right" class="col-xs-6 col-sm-3">
-             <button type="button" class="btn btn-success" onclick="addRow('myTable');return false;">Добавить строку</button>
-          </div>
-        </div>
         <h5 align="center">8. Перечень ресурсов информационно-телекоммуникационной сети «Интернет» (далее сеть-Интернет), необходимых для освоения дисциплины</h5>
             {{ form.web_resource.label_tag }}
             {{ form.web_resource }}
@@ -370,8 +351,10 @@
             {{ form.iss.label_tag }}
             {{ form.iss }}
         <br>
+
         <p align="center"><button type="submit" class="btn btn-success btn-lg">Сохранить</button>
-        <a href= "{% url 'rpds:rpd_list' %}" class="btn btn-primary btn-lg">Отмена</a></p>
+        <a href= "{% url 'rpds:rpd_export' discipline.id %}" class="btn btn-primary btn-lg">Скачать</a>
+        <a href= "{% url 'rpds:rpd_list' %}" class="btn btn-danger btn-lg">Отмена</a></p>
     </form>
 {% endblock %}
 
