--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -23,19 +23,36 @@
         background-color: red;
     }
 </style>
-    <h1>Список курсов</h1>
-    <p align="right">
-        <label>
-            <b>Курсы</b>
-        </label>
-        <br>
-    </p>
-    <div id="course_list" class="hot"></div>
+<nav style="margin: 0px 0px 20px 0px;" class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{% url 'hours:course_list' %}">Список курсов</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'hours:contingent_list' %}">Список контингента</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'hours:employee_list' %}">Штатное расписание</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<h1>Список курсов</h1>
+<p align="right">
+    <label>
+        <b>Курсы</b>
+    </label>
     <br>
-    <a href="{% url 'hours:course_upload' %}" class="btn btn-success">Загрузить курсы</a>
-    <button id="save" class="btn btn-success" name="save">Сохранить изменения</button>
+</p>
+<div id="course_list" class="hot"></div>
+<br>
+<a href="{% url 'hours:course_upload' %}" class="btn btn-success">Загрузить курсы</a>
+<button id="save" class="btn btn-success" name="save">Сохранить изменения</button>
 <!--    <button id="kup" class="btn btn-success" name="kup">TEST</button>-->
-    <a href="{% url 'hours:supervision_hours' %}" class="btn btn-success">Часы ВКР и курсовых</a>
+<a href="{% url 'hours:supervision_hours' %}" class="btn btn-success">Часы ВКР и курсовых</a>
 {% endblock %}
 
 {% block scripts %}
@@ -158,6 +175,36 @@ let columns = [
     {
         data: 'gek',
         title: 'ГЭК, ГАК',
+        width: 50,
+    },
+    {
+        data: 'ruk_vkr',
+        title: 'Руководство ВКР',
+        width: 50,
+    },
+    {
+        data: 'ruk_mag',
+        title: 'Руководство магистрантом',
+        width: 50,
+    },
+    {
+        data: 'ruk_asp',
+        title: 'Руководство аспирантом',
+        width: 50,
+    },
+    {
+        data: 'ruk_prog_mag',
+        title: 'Руководство программой магистратуры',
+        width: 50,
+    },
+    {
+        data: 'ruk_prog_asp',
+        title: 'Руководство программой аспирантуры',
+        width: 50,
+    },
+    {
+        data: 'subgroup',
+        title: 'Количество подгрупп',
         width: 50,
     },
     {
